--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Get true DNS answers in a smarter way",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index"
   },
   "keywords": [
     "dns",
