较多代码重构, 优化性能和代码风格 (#1)
* 初步优化和重构
* 重构 AddIPSet
* 重构 DNSRequest
* 重构 LoadIP 和 DomainMatcher, 优化文件读取, 支持空行
* 重构 RSTCheck, 代码整理

--- a/config.js.example
+++ b/config.js.example
@@ -14,6 +14,6 @@ module.exports = {
     "CHNRoute": "ipdb/chnroute.txt", // IPIP.net 版本2020-01-16 github.com/17mon/china_ip_list
     "BlackList": "ipdb/gfwlist.txt", // fancyss 版本2019-02-05
     "WhiteList": "ipdb/chinalist.txt", // fancyss 版本2019-02-05
-    "IpsetToAdd": "gfwlist",
+    "IpsetToAdd": "gfwlist", // 被干扰 IP 添加到的 IPSet, false 则关闭此功能
     "AutoDetectRST": true // 对未知域名自动进行HTTP(S) RST检测，关闭就全部加IPSET
 }
